# course-support-agent-harness

./: .env.example  .gitignore  README.md  demo_app.py  pyproject.toml  requirements.txt
agent_harness/: __init__.py  __main__.py  cli.py  config_loader.py  llm.py  schemas.py
agent_harness/business/: __init__.py  support_schemas.py
agent_harness/context/: __init__.py  builder.py
app/: streamlit_risk_dashboard.py
configs/: risk_policy.yaml  tool_permissions.yaml
data/: course_support_bench.jsonl
datasets/: support_sft.jsonl
docs/: architecture.md  change_record.md  data_change_record.md  data_ingestion.md  deepseek_setup.md  demo_guide.md  development_flow.md  evidence_contract.md  github_upload_checklist.md  incident_log.md  install_guide.md  model_ops.md  online_validation_notes.md  replay.md  resume_project.md  state_machine.md  support_scenario.md
examples/: knowledge_base.jsonl  public_support_utterances.jsonl  resume_profile.yaml  support_augmented_kb.jsonl  support_customers.yaml  support_policy_kb.jsonl
output/: 02_materials_audit.md  03_truth_boundary.md  04_evidence_contract.md  06_targeted_resume.md  07_interview_grilling.md  08_answer_cards.md  09_upgrade_plan.md  12_final_resume_agent_harness.md
scripts/: export_support_sft.py  ingest_bitext_public.py  run_course_support_eval.py
tests/: test_course_support_bench.py  test_data_ingestion.py  test_gates.py  test_memory.py  test_rag.py  test_risk_policy_matrix.py  test_riskbench_eval.py  test_runner.py  test_streamlit_risk_dashboard.py  test_sub_agents.py  test_support_scenario.py
(+32 files in other folders)
