[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-harness"
version = "0.1.0"
description = "A controllable, verifiable, replayable Agent Harness reference project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[project.scripts]
agent-harness = "agent_harness.cli:main"

[tool.setuptools.packages.find]
include = ["agent_harness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
